@@ -2,16 +2,23 @@ package com.example.expenseapi.service;
 
 import com.example.expenseapi.dto.ExpenseCreateDTO;
 import com.example.expenseapi.dto.ExpenseDTO;
-import com.example.expenseapi.dto.ExpenseFilter;
+import com.example.expenseapi.exception.BadRequestException;
+import com.example.expenseapi.exception.ForbiddenException;
+import com.example.expenseapi.filter.ExpenseFilter;
+import com.example.expenseapi.mapper.UserMapper;
 import com.example.expenseapi.pojo.*;
 import com.example.expenseapi.pojo.Currency;
 import com.example.expenseapi.repository.*;
 import com.example.expenseapi.mapper.ExpenseMapper;
-import com.example.expenseapi.utils.ExpenseSpecification;
+import com.example.expenseapi.utils.AuthHelper;
+import com.example.expenseapi.specification.ExpenseSpecification;
+import org.springframework.beans.BeanUtils;
+import org.springframework.beans.BeanWrapper;
+import org.springframework.beans.BeanWrapperImpl;
 import org.springframework.data.jpa.domain.Specification;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+
+import java.beans.FeatureDescriptor;
 import java.time.LocalDate;
 import java.util.*;
 import java.util.function.Function;
@@ -22,20 +29,20 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
     private final ExpenseRepository expenseRepository;
     private final CategoryRepository categoryRepository;
     private final CurrencyRepository currencyRepository;
-    private final UserRepository userRepository;
     private final MembershipRepository membershipRepository;
     private final MethodOfPaymentRepository methodOfPaymentRepository;
     private final ExpenseMapper expenseMapper;
+    private final UserMapper userMapper;
 
-    public ExpenseServiceImpl(ExpenseRepository repository, CategoryRepository categoryRepository, CurrencyRepository currencyRepository, UserRepository userRepository, MembershipRepository membershipRepository, MethodOfPaymentRepository methodOfPaymentRepository, ExpenseMapper expenseMapper) {
+    public ExpenseServiceImpl(ExpenseRepository repository, CategoryRepository categoryRepository, CurrencyRepository currencyRepository, MembershipRepository membershipRepository, MethodOfPaymentRepository methodOfPaymentRepository, ExpenseMapper expenseMapper, UserMapper userMapper) {
         super(repository);
         this.expenseRepository = repository;
         this.categoryRepository = categoryRepository;
         this.currencyRepository = currencyRepository;
-        this.userRepository = userRepository;
         this.membershipRepository = membershipRepository;
         this.methodOfPaymentRepository = methodOfPaymentRepository;
         this.expenseMapper = expenseMapper;
+        this.userMapper = userMapper;
     }
 
     public ExpenseDTO save(ExpenseCreateDTO expenseDTO) {
@@ -61,27 +68,34 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
 
     @Override
     public ExpenseDTO createExpense(ExpenseCreateDTO createDTO) {
+        User user = AuthHelper.getUser();
+        if (areNeededFieldsProvided(createDTO)) {
+            throw new BadRequestException("Title, price, category name and group name are required");
+        }
+        if (createDTO.getUser() == null) {
+            createDTO.setUser(userMapper.userToUserDTO(user));
+        }
+        if (createDTO.getCurrencyCode() == null) {
+            createDTO.setCurrencyCode(user.getPreference().getCurrency().getSymbol());
+        }
+        if (createDTO.getMethodOfPayment() == null) {
+            createDTO.setMethodOfPayment(user.getPreference().getMethod().getName());
+        }
         Expense expense = expenseMapper.expenseCreateDTOToExpense(createDTO);
         Optional<Membership> membershipOpt = membershipRepository.findByUserIdAndGroupName(createDTO.getUser().getId(), createDTO.getGroupName());
         if (membershipOpt.isEmpty()) {
-            throw new IllegalArgumentException("Invalid membership ID");
+            throw new ForbiddenException("User is not a member of the group");
         }
         expense.setMembership(membershipOpt.get());
         if (createDTO.getCategoryName() != null) {
             Category category = categoryRepository.findByName(createDTO.getCategoryName());
             expense.setCategory(category);
         }
-        if (createDTO.getMethodOfPayment() != null) {
-            MethodOfPayment method = methodOfPaymentRepository.findByName(createDTO.getMethodOfPayment());
-            expense.setMethod(method);
-        }
-        if (createDTO.getCurrencyCode() != null) {
-            Currency currency = currencyRepository.findBySymbol(createDTO.getCurrencyCode());
-            expense.setCurrency(currency);
-        }
         if (createDTO.getExpenseDate() != null) {
             expense.setDate(createDTO.getExpenseDate());
         }
+        expense.setMethod(methodOfPaymentRepository.findByName(createDTO.getMethodOfPayment()));
+        expense.setCurrency(currencyRepository.findBySymbol(createDTO.getCurrencyCode()));
         Expense savedExpense = expenseRepository.save(expense);
         return expenseMapper.expenseToExpenseDTO(savedExpense);
     }
@@ -96,7 +110,7 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
     @Override
     public List<ExpenseDTO> getExpensesForUser() {
         ExpenseFilter filter = new ExpenseFilter();
-        filter.setEmail(getUserEmail());
+        filter.setEmail(AuthHelper.getUserEmail());
         return searchExpensesDTO(filter);
     }
 
@@ -104,7 +118,7 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
     public ExpInfo getExpInfo(String group) {
         List<ExpenseDTO> groupExpenses = getExpensesForGroup(group);
         List<ExpenseDTO> userExpenses = groupExpenses.stream()
-                .filter(expense -> expense.getUser().getEmail().equals(getUserEmail()))
+                .filter(expense -> expense.getUser().getEmail().equals(AuthHelper.getUserEmail()))
                 .toList(); // Returns only user's expenses in provided group, not in all groups
         double groupSum = groupExpenses.stream().mapToDouble(ExpenseDTO::getPrice).sum();
         double userSum = userExpenses.stream().mapToDouble(ExpenseDTO::getPrice).sum();
@@ -113,20 +127,20 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
 
     @Override
     public ExpInfo getExpInfo() {
-        List<BaseGroup> groups = getAllGroups();
+        List<BaseGroup> groups = AuthHelper.getAllGroups();
         Set<ExpenseDTO> groupExpenses = groups.stream().flatMap(group -> getExpensesForGroup(group.getName()).stream()).collect(Collectors.toSet());
-        List<Expense> userExpenses = expenseRepository.findByMembershipUserEmail(getUserEmail());
+        List<Expense> userExpenses = expenseRepository.findByMembershipUserEmail(AuthHelper.getUserEmail());
         double groupSum = groupExpenses.stream().mapToDouble(ExpenseDTO::getPrice).sum();
         double userSum = userExpenses.stream().mapToDouble(Expense::getPrice).sum();
         return new ExpInfo(userSum, groupSum);
     }
 
     @Override
-    public Map<String, Double> getMapResult(ExpenseFilter filter, String currCode, String keyType) {
+    public Map<String, Double> getMapResult(ExpenseFilter filter,  String keyType) {
         List<ExpenseDTO> result = searchExpensesDTO(filter);
-        Currency currency = currencyRepository.findBySymbol(currCode);
+        Currency currency = currencyRepository.findBySymbol(AuthHelper.getUser().getPreference().getCurrency().getSymbol());
         Function<ExpenseDTO, String> keyExtractor = findKeyExtractor(keyType);
-        if (keyExtractor == null) throw new IllegalArgumentException("Invalid key type");
+        if (keyExtractor == null) throw new BadRequestException("Invalid key type");
         return totalExpensesMap(result, keyExtractor, currency);
     }
 
@@ -136,22 +150,6 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
         filter.setGroupName(groupName);
         List<ExpenseDTO> expenses = searchExpensesDTO(filter);
         return expenses.stream().max(Comparator.comparing(ExpenseDTO::getId));
-    }
-
-
-    private String getGroupName() {
-        return getAllGroups().getFirst().getName();
-    }
-
-    private List<BaseGroup> getAllGroups() {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        String email = auth.getName();
-        Optional<User> user = userRepository.findByEmail(email);
-        List<BaseGroup> groups = null;
-        if (user.isPresent()) {
-            groups = membershipRepository.findBaseGroupsByUser_Id(user.get().getId());
-        }
-        return groups;
     }
 
     @Override
@@ -171,9 +169,9 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
     @Override
     public List<ExpenseDTO> searchExpensesDTO(ExpenseFilter filter) {
         if (filter.getGroupName() == null || filter.getGroupName().isEmpty()) {
-            filter.setGroupName(getGroupName());
+            filter.setGroupName(AuthHelper.getGroupName());
         }
-        if (!isGroupNameValid(filter.getGroupName())) {
+        if (!AuthHelper.isGroupNameValid(filter.getGroupName())) {
             return Collections.emptyList();
         }
         Specification<Expense> spec = Specification.where(null);
@@ -187,17 +185,7 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
         spec = spec.and(ExpenseSpecification.hasMethod(filter.getMethodsOfPayment()));
         return expenseRepository.findAll(spec).stream()
                 .map(expenseMapper::expenseToExpenseDTO)
-                .collect(Collectors.toList());
-    }
-
-    private boolean isGroupNameValid(String name){
-        return getAllGroups().stream()
-                .anyMatch(group -> group.getName().equals(name));
-    }
-
-    private String getUserEmail() {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        return auth.getName();
+                .toList();
     }
 
     private double convertFromCurrencyToAnother(double value, Currency srcCurr, Currency dstCurr) {
@@ -210,13 +198,16 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
         return value;
     }
 
+    @Override
+    public List<String> getPatternKeys() {
+        return Arrays.asList("category", "method", "user");
+    }
+
     private Function<ExpenseDTO, String> findKeyExtractor(String keyType) {
         return switch (keyType) {
             case "category" -> e -> e.getCategory().getName();
-            case "method" -> ExpenseDTO::getMethodOfPayment;
+            case "method" -> e-> e.getMethodOfPayment().getName();
             case "user" -> e -> e.getUser().getEmail();
-            case "month" -> e -> e.getExpenseDate().getMonth().name();
-            case "year" -> e -> String.valueOf(e.getExpenseDate().getYear());
             default -> null;
         };
     }
@@ -229,5 +220,30 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
             map.put(key, map.getOrDefault(key, 0.0) + price);
         }
         return map;
+    }
+
+    private static String[] getNullPropertyNames(Object source) {
+        BeanWrapper beanWrapper = new BeanWrapperImpl(source);
+        return Arrays.stream(beanWrapper.getPropertyDescriptors())
+                .map(FeatureDescriptor::getName)
+                .filter(propertyName -> beanWrapper.getPropertyValue(propertyName) == null)
+                .toArray(String[]::new);
+    }
+
+    @Override
+    public ExpenseDTO updateExpense(Long id, ExpenseDTO expenseDTO) {
+        Expense expense = expenseRepository.findById(id).orElse(null);
+        Expense updatedExpense = expenseMapper.expenseDTOToExpense(expenseDTO);
+        BeanUtils.copyProperties(updatedExpense, expense, getNullPropertyNames(updatedExpense));
+        expense.setMethod(methodOfPaymentRepository.findByName(updatedExpense.getMethod().getName()));
+        return expenseMapper.expenseToExpenseDTO(expenseRepository.save(expense));
+    }
+
+    private boolean areNeededFieldsProvided(ExpenseCreateDTO expenseCreateDTO) {
+        return expenseCreateDTO.getTitle() == null ||
+                expenseCreateDTO.getPrice() == null ||
+                expenseCreateDTO.getCategoryName() == null ||
+                expenseCreateDTO.getGroupName() == null;
+
     }
 }
