@@ -1,17 +1,17 @@
 package com.example.expenseapi.service;
 
+import com.example.expenseapi.pojo.BaseGroup;
 import com.example.expenseapi.pojo.Group;
 import com.example.expenseapi.pojo.Membership;
 import com.example.expenseapi.pojo.User;
 import com.example.expenseapi.repository.GroupRepository;
 import com.example.expenseapi.repository.RoleRepository;
-import org.springframework.security.core.context.SecurityContextHolder;
+import com.example.expenseapi.utils.AuthHelper;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 public class GroupServiceImpl extends GenericServiceImpl<Group, Long> implements GroupService {
@@ -27,20 +27,24 @@ public class GroupServiceImpl extends GenericServiceImpl<Group, Long> implements
     }
 
     @Override
-    public List<Group> getAll() {
-        String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        Optional<User> user = userService.findByEmail(email);
-        return user.map(value ->
-                membershipService.getBaseGroupsByUserId(value.getId()).stream()
-                        .filter(baseGroup -> baseGroup instanceof Group)
-                        .map(baseGroup -> (Group) baseGroup)
-                        .collect(Collectors.toList())
-        ).orElse(Collections.emptyList());
+    public List<BaseGroup> getBaseGroups() {
+        String email = AuthHelper.getUserEmail();
+        return membershipService.getBaseGroupsByUserId(userService.findByEmail(email).get().getId());
+    }
+
+    @Override
+    public List<Group> getActiveGroups() {
+        return getBaseGroups()
+                .stream()
+                .filter(baseGroup -> baseGroup instanceof Group)
+                .map(baseGroup -> (Group) baseGroup)
+                .toList();
+
     }
 
     @Override
     public Group save(Group entity) {
-        String email = SecurityContextHolder.getContext().getAuthentication().getName();
+        String email = AuthHelper.getUserEmail();
         Optional<User> user = userService.findByEmail(email);
         Group newGroup = super.save(entity);
         membershipService.save(new Membership(user.get(), newGroup, roleRepository.findById(1L).get()));
